2008-03-25  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c: Port some of the generic sharing changes.

	* mini-amd64.c (add_valuetype): Fix handling of vtypes in the managed case.

2008-03-24  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (NEW_I8CONST): Set ins->type.

	* cpu-amd64.md (lcompare_imm): Move the _membase_imm opcodes to one place.

	* method-to-ir.c (op_to_op_src1_membase): Disable OP_X86_COMPARE_MEMBASE8_IMM on
	amd64 as well.
	(decompose_opcode): Add some missing opcodes.

	* cpu-amd64.md: Add amd64_sub_membase_imm, fix the lengths of the load_mem 
	opcodes.

	* method-to-ir.c (mono_method_to_ir2): Fix the amd64 build.

	* mini-<ARCH>.c (mono_arch_emit_call): Remove the unused 'is_virtual' argument.

	* mini-x86.c method-to-ir.c mini.c local-propagation.c: Fix some small bugs.

2008-03-24  Zoltan Varga  <vargaz@freemail.hu>

	* mini-x86.c (mono_arch_emit_call): Fix win32 and apple support.

2008-03-24  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_decompose_long_opts): Handle OP_LCONV_TO_OVF_U and
	OP_LCONV_TO_OVF_U_UN.

	* mini-x86.c: Fix x86 build.
	
2008-03-24  Zoltan Varga  <vargaz@gmail.com>

	* inssel.brg: Fix the build.

	* iltests.il.in: Add a test for lconv.ovf.u8.un.

2008-03-24  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini.c (mono_method_to_ir): Implement readonly for ldelema and
	Array:Address. Fixes #372410.

	* iltests.il.in: New tests for readonly prefix.

2008-03-23  Zoltan Varga  <vargaz@gmail.com>

	* mini-s390.c (mono_arch_emit_call): Remove some dead code.

	* mini-s390x.h mini-s390x.c cpu-s390x.md: Ongoing S390x porting work.

2008-03-22  Zoltan Varga  <vargaz@gmail.com>

	* mini-s390.h mini-s390.c: Avoid using the same registers for local and global 
	reg allocation. Finish the S390 port.

2008-03-21  Zoltan Varga  <vargaz@gmail.com>

	* inssel.brg: Use MONO_INST_NEW in MONO_EMIT_NEW_ICONST () since that is called
	by the backends.
